Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48105

winrt: Qml application asserts when sent to background

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.6.0 Alpha
    • QPA
    • Windows 8.1 x64
      MSVC 2013
      Nokia Lumia 1520 (WinPhone 8.1)
    • WinRT
    • f57afda69fd9fdf9444d13e3461d556fae1dfcdf

      Steps:
      1. Debug attached application with visual studio
      2. Press back arrow
      Expected: No asserts
      Actual: System out

      ASSERT failure in QCoreApplication::sendEvent: "Cannot send events to objects owned by a different thread. Current thread 26f9460. Receiver '' (of type 'QQuickWindowQmlImpl') was created in thread 26f2720", qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp, line 556
      
      ASSERT failure in QCoreApplication::sendEvent: "Cannot send events to objects owned by a different thread. Current thread 26f9460. Receiver '' (of type 'QQuickRootItem') was created in thread 26f2720", file qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp, line 556
      
      ASSERT failure in QCoreApplication::sendEvent: "Cannot send events to objects owned by a different thread. Current thread 26f9460. Receiver '' (of type 'QQuickRootItem') was created in thread 26f2720", file qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp, line 556
      
      ASSERT failure in QCoreApplication::sendEvent: "Cannot send events to objects owned by a different thread. Current thread 26f9460. Receiver '' (of type 'QQuickWindowQmlImpl') was created in thread 26f2720", qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp, line 556
      
      ASSERT failure in QCoreApplication::sendEvent: "Cannot send events to objects owned by a different thread. Current thread 26f9460. Receiver '' (of type 'QQuickRootItem') was created in thread 26f2720", file qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp, line 556
      

        1. assert.qml
          0.1 kB
          Samuel Nevala
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes